@@ -34,6 +34,7 @@
 26. Use a button for server update link in 'Information' dialog.
 27. Ignore headers when searching in lists.
 28. Draw border around all dialog buttons.
+29. Indicate current track in browse view.
 
 5.11.4
 ------
